# HelloQT

1/: CMakeLists.txt  mainwindow.ui
